--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello wold</h1>
+    <div id="app"></div>
+
     <script src="./bundle.js"></script>
   </body>
 </html>
